[package]
name = "feature-store-demo"
version = "0.1.0"
edition = "2021"

[lib]
name = "feature_store_demo"
path = "lib.rs"

[[bin]]
name = "demo_server"
path = "demo_server.rs"

[[bin]]
name = "build_features"
path = "build_features_bin.rs"

[dependencies]
# redis-rs 0.27+ ships the tokio + connection-manager features the
# demo uses. HEXPIRE/HTTL are issued via `redis::cmd("HEXPIRE")`
# because the typed bindings don't ship on this client line yet —
# the wire protocol is the same.
redis = { version = "0.27", features = ["tokio-comp", "aio", "connection-manager"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
