[package]
name = "leaderboard-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
redis = { version = "0.24", features = ["script", "tokio-comp"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"

[[bin]]
name = "demo_server"
path = "demo_server.rs"
