[package]
name = "pub-sub-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
redis = { version = "0.27", features = ["tokio-comp", "aio", "connection-manager"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"

[[bin]]
name = "demo_server"
path = "demo_server.rs"
