[package]
name = "recommendation-engine-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
redis = { version = "0.27", features = ["tokio-comp", "aio", "connection-manager"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fastembed = "4"
base64 = "0.22"

[[bin]]
name = "build_catalog"
path = "build_catalog.rs"

[[bin]]
name = "demo_server"
path = "demo_server.rs"
