[package]
name = "time-series-dashboard-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
rand = "0.8"
redis = { version = "0.24", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "demo_server"
path = "demo_server.rs"
